--- a/Services/src/main/resources/webutils/css/webutils.css
+++ b/Services/src/main/resources/webutils/css/webutils.css
@@ -206,3 +206,27 @@ button.yk-info-close-button:hover
 	border: 1px solid blue;
 	border-radius: 0.5em;
 }
+
+.slideImageActive
+{
+	display: inline-block;
+}
+
+.slideImageInactive
+{
+	display: none;
+}
+
+.slideImageNavBut
+{
+	padding: 0.5em;
+	position: absolute; 
+	top: 50%; 
+	background-color: rgba(220, 220, 220, 0.6);
+	cursor: pointer;
+}
+
+.slideImageNavBut > span
+{
+	color: rgba(255,255,255, 0.5);
+}
