Added support for remote controller interfaces

--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -1486,7 +1486,7 @@
 
 				for(var i = 0; i &lt; roles.length; i++)
 				{
-					if(this.$scope.hasRole(this.role))
+					if(this.$scope.hasRole(roles[i]))
 					{
 						return true;
 					}
