Made extension point non-unique. In ui added support for onchange event and way to uniquely identify form-field container div. Added support to customize in-progress icon

--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -760,7 +760,7 @@
 				context["modelDef"] = modelDef;
 			</exe-script>
 			
-			<div style="display: inline-block; vertical-align: top; width: ${element.attr('full-width')}; ${element.attr('element-style')}">
+			<div style="display: inline-block; vertical-align: top; width: ${element.attr('full-width')}; ${element.attr('element-style')}" model-field-div="${modelField}">
 				<table style="width: 100%;border-collapse: collapse;border-spacing: 0px;">
 					<tr>
 						<td style="vertical-align: top; padding: 0px; width: ${element.attr('label-width')}; min-width: ${element.attr('label-width')}; " 
